# local-passkeeper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_gui.py  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_browser_extension.md  02_import_support.md  03_p2p_sync.md  04_hardware_key_support.md  05_scheduled_audits.md  bug_report.md  config.yml
.github/workflows/: ci.yml
docs/: INSTALACION.md  QUICKSTART.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-CN.md
src/passkeeper/: __init__.py
src/passkeeper/cli/: commands.py
src/passkeeper/core/: crypto.py  vault.py
src/passkeeper/gui/: app.py
